--module-path is passed directly to frgaal